syntax = "proto3";

package job;
option go_package = "github.com/liujianping/job/pb";

message Job {
    string uuid = 1;
    string name = 2;
    string command = 3;
    repeated string argments = 4;
    map<string, string> envs = 5;
    bytes payload = 6;
    string crontab = 7;
    string repeat_interval = 8;
    int32  repeat_times = 9;
    int32  retry_times = 10; 
    string cmd_timeout = 11;
    string job_timeout = 12;
    int64  created_at = 13;
}

enum JobStatus {
    UnknownJob = 0;
    JobCreated = 1;
    JobAccepted = 2;
    JobRunning = 3;
    JobCanceled = 4;
    JobDealineExceeded = 5;
    JobTimeoutExceeded = 6;
    JobRetryTerminated = 7;
    JobCompleted = 8;
}

message JobResult {
    int32 code = 1;
    string reason = 2;    
}

message Report{
   string uuid = 1;
   JobStatus status = 2;
   JobResult result = 3;
   int64  timestamp = 4;
}